--- a/styles.css
+++ b/styles.css
@@ -204,15 +204,13 @@ nav h2 {
   display: flex;
   flex-direction: row;
 }
-.trend dl {
+dl {
     display: flex;
     color: #590242;
   }
   
-  .trend dt,dd {
-    display: flex;
-    color: #590242;
-    padding-right: 0px;
+  dt {
+    padding-right: 5px;
   }
 .trend h3 {
     color: #590242;
@@ -283,8 +281,7 @@ nav h2 {
   audio::-webkit-media-controls-enclosure {
    background-color: rgba(252, 245, 245, 0.5);
   }
-  #trending audio {
-    display: flex;
+  audio {
     position: absolute;
     bottom: 150px;
     left: 5px;
@@ -331,10 +328,10 @@ nav h2 {
   /*Scroll
   ------------------------------------*/
   .scroll  {
+    display: grid;
     grid-template-columns: repeat(5, 1fr);
-    overflow: scroll;
+    overflow-x: auto;
     overflow-y: hidden;
-    position: relative;
   }
  .scroll section {
     margin: 10px;
@@ -342,7 +339,7 @@ nav h2 {
   }
   .scroll div {
     position: absolute;
-    top: 250px;
+    top: 251px;
     background-color:#ebe3e3;
     padding: 5px;
     height: 50px;
