--- a/styles.css
+++ b/styles.css
@@ -517,14 +517,14 @@ nav h2 {
   display: grid;
   height: 400px;
   width: 350px;
-  float: right;]*/
+  float: right;]
 ---------------------------------------------------------------*/
-/*.scroll  {
+.scroll  {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   overflow-x: auto;
   overflow-y: hidden;
-}*/
+}
 .scroll section {
   margin: 10px;
   position: relative;
@@ -536,7 +536,7 @@ nav h2 {
   padding: 5px;
   height: 50px;
   width: 100%;
-}    
+} */   
  /*Your Playlists
  [grid-template-rows: auto; 
   display: grid;
