--- a/styles.css
+++ b/styles.css
@@ -126,6 +126,9 @@ header {
     background-image: linear-gradient(to right, #2104d9,#030a8c,#020873,#020659);
     padding: 2px 2px 2px 2px;
     top: 30px;
+    width: auto;
+    margin-top: 10px;
+    height: 70px;
    position: relative;
 }
 header p {
@@ -150,10 +153,8 @@ footer p {
 }
 footer {
     text-align: center;
-    position: relative;
     clear: both;
     color: #590242;
-    z-index: 5;
     margin-bottom: 5px;
 }
 
@@ -185,7 +186,7 @@ nav h2 {
     visibility: hidden;
     display: none;
   }
-.muzamaker {
+li a.muzamaker {
     font-size: 15px;
     text-transform: capitalize;
     color: #ffffff;
@@ -209,42 +210,36 @@ nav h2 {
   display: flex;
   flex-direction: row;
 }
-dl {
+dl,dt {
     display: flex;
     color: #590242;
+    position: relative;
+    bottom: 25px;
+    padding-right: 5px;
+    z-index: 1;
   }
-  
+ /* 
 dt {
     padding-right: 5px;
-  }
+  }*/
 #trending h3 {
     color: #590242;
     margin: 2px;
+    bottom: 40px;
+    left: 5px;
+    position: absolute;
 }
 #trending h2 {
   color:#590242;
 }
 
   /*Your Playlists
-  [.FlexWrapper {
-  background-color: indigo;
-  display: flex;
-  height: 200px;
-  width: 400px;
-}
-.FlexItem {
-  background-color: #34005b;
-  display: flex;
-  height: 100px;
-  width: 200px;
-}
-]
   -------------------------------------*/
-  #playlists {
+ /* #playlists {
     background-color: #2699fb;
-   /* width:auto;
-    grid-column-start:auto;*/
-  }
+    width:auto;
+    grid-column-start:auto;
+  }*/
   #playlists h2{
     color: #590242;
 }
@@ -268,11 +263,11 @@ grid-template-rows: auto;
 
 /*Curated Playlist
 -----------------------------------------------------------------*/
-#curated  {
+/*#curated  {
   background-color: #2104d9;
   width: auto;
   grid-column-start:auto;
-}
+}*/
 #curated h2 {
   color:#590242;
 }
@@ -316,9 +311,9 @@ grid-template-rows: auto;
   }
   audio {
     position: absolute;
-    /*bottom: 150px;
+    bottom: 150px;
     left: 5px;
-    border-radius: 10%;*/
+    border-radius: 10%;
   }
  
 
@@ -393,7 +388,7 @@ grid-template-rows: auto;
   .scroll1 div {
     position: absolute;
     top: 251px;
-    background-color:#ebe3e3;
+    background-color:#2699fb;
     padding: 5px;
     height: 100px;
     width: 350px;
@@ -413,7 +408,7 @@ grid-template-rows: auto;
   .scroll2 div {
     position: absolute;
     top: 251px;
-    background-color:#ebe3e3;
+    background-color:#2104d9;
     padding: 5px;
     height: 100px;
     width: 350px;
@@ -462,6 +457,9 @@ grid-template-rows: auto;
         top: 0;
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+        width:100%;
+        height: 50px;
+        justify-content: space-between;
     }
     #dropdown span, input {
         display: none;
@@ -477,15 +475,17 @@ grid-template-rows: auto;
     }
     header {
         background-image: linear-gradient(to right, #2104d9,#030a8c,#020873,#020659);
-        padding: 5px 5px 5px 5px;
+        padding: 2px 2px 2px 2px;
         width: auto;
+        margin-top:10px;
+        height: 70px;
         top: 30px;
        position: relative;
     }
     main {
         background-color: #ffffff;
     }
-    .muzamaker {
+a.muzamaker {
     font-size: 15px;
     text-transform: capitalize;
     color: #ffffff;
@@ -546,11 +546,6 @@ nav h2 {
   width: 100%;
 } */   
  /*Your Playlists
- [grid-template-rows: auto; 
-  display: grid;
-  height: 400px;
-  width: 350px;
-  float: right;]
  ---------------------------------------------------------------*/
 /* .scroll1  {
   display: grid;
