--- a/styles.css
+++ b/styles.css
@@ -150,12 +150,14 @@ p, dl, dd {
 }
 footer p {
   font-size: .75em;
+  color: #590242;
 }
 footer {
     text-align: center;
-    clear: both;
-    color: #590242;
     margin-bottom: 5px;
+    position: absolute;
+    width: 100%;
+    height: 30px;
 }
 
 /*Navigation
@@ -164,7 +166,7 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #2104d9;
+  background-color: #030a8c;
   color: #ffffff;
   width:100%;
   height: 30px;
@@ -210,10 +212,8 @@ li a.muzamaker {
 dl,dt {
     display: flex;
     color: #590242;
-    position: relative;
     bottom: 25px;
     padding-right: 5px;
-    z-index: 1;
   }
  /* 
 dt {
@@ -235,8 +235,7 @@ dt {
   -------------------------------------*/
   #playlists {
     background-color: #2699fb;
-    width:auto;
-    grid-column-start:auto;
+    width:450px;
   }
   #playlists h2{
     color: #590242;
@@ -245,12 +244,9 @@ dt {
   color: #ffffff;
 }
 #playlists section {
-grid-template-rows: auto; 
-  display: flexbox;
-  height: 400px;
-  width: 350px;
-  float: right;
-  clear: left;
+  display: block;
+  height: 200px;
+  width: 250px;
 }
 #playlists img {
  /* background-color: #0D8Dfb;*/
@@ -264,22 +260,19 @@ grid-template-rows: auto;
 -----------------------------------------------------------------*/
 #curated  {
   background-color: #2104d9;
-  width: auto;
-  grid-column-start:auto;
-}
+  width: 450px;
+  }
 #curated h2 {
   color:#590242;
 }
 #curated h3,p {
   color: #ffffff;
 }
-#curated section {
-  grid-template-rows: auto; 
-  display: flexbox;
-  height: 400px;
-  width: 350px;
-  float: right;
-  clear: left;
+#curated section { 
+  display: block;
+  height: 200px;
+  width: 250px;
+
 }
 #curated img {
   /*background-color:#020659;*/
@@ -366,11 +359,10 @@ grid-template-rows: auto;
     position: relative;
   }
   .scroll div {
-    /*position: absolute;*/
     top: 251px;
     background-color:#ebe3e3;
     padding: 5px;
-    height: 50px;
+    height: auto;
     width: 350px;
   }
  /*Scroll -Your Playlist
@@ -390,7 +382,7 @@ grid-template-rows: auto;
     top: 251px;
     background-color:#0D8Dfb;
     padding: 5px;
-    height: 100px;
+    height: 50px;
     width: 350px;
   }
    /*Scroll - Curated Playlist
@@ -410,7 +402,7 @@ grid-template-rows: auto;
     top: 251px;
     background-color:#020659;
     padding: 5px;
-    height: 100px;
+    height: 50px;
     width: 350px;
   }
   /*Buttons
@@ -419,7 +411,7 @@ grid-template-rows: auto;
  background-color: #590242;
  font: 1em sans-serif;
  color:#ffffff;
- border-radius: 10px;
+ border-radius: 10%;
  float: none;
  position: relative;
 }
@@ -430,7 +422,7 @@ grid-template-rows: auto;
   background-color: #590242;
   font: 1em sans-serif;
   color:#ffffff;
-  border-radius: 10px;
+  border-radius: 10%;
   float: none;
   position: relative;
  }
@@ -441,7 +433,7 @@ grid-template-rows: auto;
   background-color: #590242;
   font: 1em sans-serif;
   color:#ffffff;
-  border-radius: 10px;
+  border-radius: 10%;
   float: none;
   position: relative;
  }
@@ -457,7 +449,7 @@ grid-template-rows: auto;
         top: 0;
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-        width:100%;
+        width:90%;
         height: 50px;
         justify-content: space-between;
     }
